# stratagent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  crew.py  critic_agent.py  financial_agent.py  research_agent.py  schemas.py  synthesis_agent.py  tasks.py
agents/tools/: calculator_tool.py  retrieval_tool.py  search_tool.py
api/: __init__.py  main.py  schemas.py
api/routes/: analysis.py
api/worker/: __init__.py  runner.py
config/: __init__.py  settings.py
evaluation/: __init__.py
frontend/: app.py
infra/docker/: Dockerfile  Dockerfile.frontend  README.md  docker-compose.api.yml  docker-compose.yml
infra/k8s/: deployment.yaml
ingestion/: __init__.py  load.py  models.py  schemas.py  upsert.py
ingestion/loaders/: __init__.py  base.py  csv_loader.py  pdf_loader.py  web_loader.py
mlartifacts/116767832304093327/traces/tr-a1aa46f4ce689f9235f9d7c966937f60/artifacts/: traces.json
mlartifacts/116767832304093327/traces/tr-e57691ab6263c3d821dd22ee089ec21a/artifacts/: traces.json
public/: architecture.mmd
retrieval/: __init__.py  retriever.py
tests/: __init__.py  conftest.py  load_test.py  test_agents.py  test_api.py  test_ingestion.py  test_retriever.py  test_upsert.py
